--- a/composer.json
+++ b/composer.json
@@ -1,35 +1,34 @@
 {
-    "name": "nystudio107/craft-imageoptimize-thumbor",
-    "description": "Provides an Thumbor image transform type for the ImageOptimize plugin.",
-    "type": "image-transform",
-    "version": "1.3.1",
-    "keywords": [
-        "craftcms",
-        "thumbor",
-        "image-optimize",
-        "image-transform"
-    ],
-    "support": {
-        "docs": "https://github.com/nystudio107/craft-imageoptimize-thumbor/blob/v1/README.md",
-        "issues": "https://github.com/nystudio107/craft-imageoptimize-thumbor/issues"
-    },
-    "license": "proprietary",
-    "authors": [
-        {
-            "name": "nystudio107",
-            "homepage": "https://nystudio107.com"
-        }
-    ],
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "require": {
-        "craftcms/cms": "^3.0.0",
-        "nystudio107/craft-imageoptimize": "^1.6.33",
-        "webfactory/phumbor": "^1.2"
-    },
-    "autoload": {
-        "psr-4": {
-          "nystudio107\\imageoptimizethumbor\\": "src/"
-        }
+  "name": "nystudio107/craft-imageoptimize-thumbor",
+  "description": "Provides an Thumbor image transform type for the ImageOptimize plugin.",
+  "type": "image-transform",
+  "version": "1.3.2",
+  "keywords": [
+    "craftcms",
+    "thumbor",
+    "image-optimize",
+    "image-transform"
+  ],
+  "support": {
+    "docs": "https://github.com/nystudio107/craft-imageoptimize-thumbor/blob/v1/README.md",
+    "issues": "https://github.com/nystudio107/craft-imageoptimize-thumbor/issues"
+  },
+  "license": "proprietary",
+  "authors": [
+    {
+      "name": "nystudio107",
+      "homepage": "https://nystudio107.com"
     }
+  ],
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "require": {
+    "nystudio107/craft-imageoptimize": "^1.6.33 || ^4.0.0-beta.1",
+    "webfactory/phumbor": "^1.2"
+  },
+  "autoload": {
+    "psr-4": {
+      "nystudio107\\imageoptimizethumbor\\": "src/"
+    }
+  }
 }
