--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "nystudio107/craft-imageoptimize-thumbor",
   "description": "Provides an Thumbor image transform type for the ImageOptimize plugin.",
   "type": "image-transform",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "keywords": [
     "craftcms",
     "thumbor",
@@ -25,6 +25,24 @@
   "require": {
     "nystudio107/craft-imageoptimize": "^1.6.33",
     "webfactory/phumbor": "^1.2"
+  },
+  "require-dev": {
+    "craftcms/ecs": "dev-main",
+    "craftcms/phpstan": "dev-main",
+    "craftcms/rector": "dev-main"
+  },
+  "scripts": {
+    "phpstan": "phpstan --ansi --memory-limit=1G",
+    "check-cs": "ecs check --ansi",
+    "fix-cs": "ecs check --fix --ansi"
+  },
+  "config": {
+    "allow-plugins": {
+      "craftcms/plugin-installer": true,
+      "yiisoft/yii2-composer": true
+    },
+    "optimize-autoloader": true,
+    "sort-packages": true
   },
   "autoload": {
     "psr-4": {
