--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
   "require-dev": {
     "craftcms/ecs": "dev-main",
     "craftcms/phpstan": "dev-main",
-    "craftcms/rector": "dev-main"
+    "craftcms/rector": "dev-main",
+    "craftcms/aws-s3": "^2.0.0"
   },
   "scripts": {
     "phpstan": "phpstan --ansi --memory-limit=1G",
